# my_project_cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp  os.cmake  std.cmake  std_libcxx.cmake  warnings.cmake
.cache/clangd/index/: it_works.cpp.47549BC058946ABB.idx  main.cpp.55E74BCBEF467371.idx
.config/git/: exclude
tests/: it_works.cpp
